# Online-Evolving-SNN-for-anomaly-detection

./: .gitignore  README.md  config.sh  markdown.yml  run.sh  visu_result.py
OeSNN-A/: .gitignore  README.md  optuna_mysql_test.py  optuna_mysql_train.py  run_with_optuna.sh  setup.py
OeSNN-A/src/: OeSNN.cpp  OeSNN.h  OeSNNPythonWrapper.pyx
OeSNN-B/: README.md  makefile  optuna_mysql_test.py  optuna_mysql_train.py
OeSNN-B/src/: MovingAverage.h  OeSNN.cpp  OeSNN.h  OeSNNPythonWrapper.pyx
OeSNN-C/: .gitignore  README.md  optuna_mysql_test.py  optuna_mysql_train.py  run_with_optuna.sh  setup.py
OeSNN-C/src/: MovingAverage.h  OeSNN.cpp  OeSNN.h  OeSNNPythonWrapper.pyx
OeSNN-D/: .gitignore  README.md  optuna_mysql_test.py  optuna_mysql_train.py  setup.py
OeSNN-D/include/sxdgrf/: .gitignore  .gitmodules  CMakeLists.txt  README.md  grf.h  unit_tests.cpp
OeSNN-D/include/sxdgrf/kmeans/: README.md
OeSNN-D/include/sxdgrf/python_module/: README.md
OeSNN-D/include/sxdgrf/python_module/utils/: cluster_utils.py  cov_utils.py  plot_utils.py
OeSNN-D/include/sxdgrf/utils/: moving_average.h
OeSNN-D/src/: .gitignore  MovingAverage.h  OeSNN.cpp  OeSNN.h  OeSNNPythonWrapper.pyx
Spirit/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  ring_buffer.h  spirit.cpp  spirit.h  test.py
Spirit/python_module/: python_module.cpp
data/: DatasetBase.py  Dataset_003.py  Dataset_008.py
data/Dataset_003/: README.md  anomaly_art_daily_amp_rises-test.csv  anomaly_art_daily_drift-test.csv  anomaly_art_daily_drift-train.csv  (+15 more)
lib/: SignalUtils.py
(+16 files in other folders)
